<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCR Bravo Black Ops App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_access_request">Request Activity</string>
    <string name="email_text">Email:</string>
    <string name="ingress_ign">Ingress IGN:</string>
    <string name="request_access">Request Access</string>
    <string name="default_email">you@email.com</string>
    <string name="base_url">test.com</string>
    <string name="title_activity_target_list">Jobs</string>
    <string name="submit_target">Submit Target</string>
    <string name="administrator">Administrator</string>
    <string name="title_activity_target_submission">Submit Job</string>
    <string name="headline_text">Headline</string>
    <string name="target_portal_text">Target Portal</string>
    <string name="details_text">Details</string>
    <string name="title_activity_portal_list_selection">Portals</string>
    <string name="add_string">Add</string>
    <string name="submit_target_text">Submit Targets</string>
    <string name="submit_job_text">Submit Job</string>
    <string name="request_error">There was an issue with your request. Please try again later.</string>
    <string name="no_internet_connection">No Internet Connection Available</string>
    <string name="string_job_title">Title</string>
    <string name="string_example_target_portals">Example Portal +0 portals</string>
    <string name="string_test_user">Test User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_text">List</string>
    <string name="accept_job_text">Accept Job</string>
    <string name="sample_job_detail_text">This is just text details of texty text!!!!</string>
    <string name="requester_string">Requester</string>
    <string name="ada_default_agent_text">_ADA_</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="illegal_argument_exception">Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="example_address">123 Downtheway Lane, Chicago, Il 60606</string>
    <string name="string_map">Map</string>
    <string name="title_activity_administration">Administration</string>
    <string name="title_activity_accept_pending_users">Accept Pending Users</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="app_not_available">App Not Available</string>
    <string name="on_text">Location:ON</string>
    <string name="off_text">Location: OFF</string>
    <string name="edit_target">Edit Job</string>
    <string name="submit_portal_list_text">Submit Portal List</string>
    <string name="string_remove_portal">Remove Portal</string>

</resources>
