<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ucr.bravo.blackops.activities.JobSubmissionActivity$PlaceholderFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/headline_text"
        android:id="@+id/headlineTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Sample Headline"
        android:id="@+id/jobHeadlineTextView"
        android:layout_below="@+id/headlineTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/target_portal_text"
        android:id="@+id/portalTextView"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/jobHeadlineTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/numOfPortalsTextView"
        android:layout_alignBottom="@+id/viewPortalsButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/portalTextView"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/viewPortalsButton" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/details_text"
        android:id="@+id/detailsTextView"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/viewPortalsButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/jobDetailsTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/detailsTextView"
        android:layout_alignRight="@+id/detailsTextView"
        android:layout_alignEnd="@+id/detailsTextView"
        android:layout_marginTop="30dp"
        android:text="@string/sample_job_detail_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/view_text"
        android:id="@+id/viewPortalsButton"
        android:src="@drawable/ic_action_view_as_list"
        android:layout_below="@+id/portalTextView"
        android:layout_toLeftOf="@+id/viewMapbutton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewMapbutton"
        android:contentDescription="@string/string_map"
        android:src="@drawable/ic_action_map"
        android:layout_above="@+id/detailsTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/viewPortalsButton" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/requester_string"
        android:id="@+id/requesterLabelTextView"
        android:layout_below="@+id/jobDetailsTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ada_default_agent_text"
        android:id="@+id/jobRequesterTextView"
        android:layout_below="@+id/requesterLabelTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp" />




</RelativeLayout>
