<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="0dp">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/string_job_title"
                        android:layout_span="3"
                        android:id="@+id/titleTextView" />

                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/example_address"
                        android:id="@+id/portalAddressTextView" />

                </TableRow>
            </TableLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/string_remove_portal"
                android:id="@+id/removeFromPListButton"
                android:src="@drawable/ic_action_remove_dark"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>