<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="0dp">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/string_job_title"
                        android:layout_span="3"
                        android:id="@+id/titleTextView" />

                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_example_target_portals"
                        android:id="@+id/portalNamesTextView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_test_user"
                        android:id="@+id/requesterNameTextView"
                        android:paddingLeft="10dp" />

                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0.0 mi"
                android:id="@+id/distanceTextView"
                android:layout_gravity="right"
                android:textStyle="bold"
                android:padding="15dp" />
        </TableRow>
     </TableLayout>
</LinearLayout>