<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ucr.bravo.blackops.AccessRequestActivity$PlaceholderFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:layout_marginTop="106dp"
            android:layout_marginRight="39dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email_text"
            android:id="@+id/textView"
            android:layout_alignBottom="@+id/emailEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/emailEditText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ignEditText"
            android:inputType="text"
            android:layout_below="@+id/emailEditText"
            android:layout_alignLeft="@+id/emailEditText"
            android:layout_alignStart="@+id/emailEditText"
            android:layout_marginTop="42dp"
            android:layout_alignRight="@+id/emailEditText"
            android:layout_alignEnd="@+id/emailEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ingress_ign"
            android:id="@+id/textView2"
            android:layout_alignBottom="@+id/ignEditText"
            android:layout_toLeftOf="@+id/ignEditText" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_access"
            android:id="@+id/requestAccessButton"
            android:layout_below="@+id/ignEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp" />

    </RelativeLayout>

</RelativeLayout>
